@@ -1,16 +1,16 @@
 {
-  "timestamp" : "2022-06-03T08:13:48Z",
+  "timestamp" : "2022-06-03T16:18:15Z",
   "count_outdated" : 312,
   "uniques_outdated" : 163,
-  "count" : 329,
-  "uniques" : 176,
+  "count" : 327,
+  "uniques" : 174,
   "clones" : [
     {
       "timestamp": "2022-05-20T00:00:00Z",
-      "count": 3,
-      "count_minmax": [ 3, 14 ],
-      "uniques": 3,
-      "uniques_minmax": [ 3, 10 ]
+      "count": 1,
+      "count_minmax": [ 1, 14 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 10 ]
     },
     {
       "timestamp": "2022-05-21T00:00:00Z",
