@@ -1,11 +1,11 @@
 {
-  "count": 17,
-  "uniques": 5,
+  "count": 15,
+  "uniques": 4,
   "clones": [
     {
       "timestamp": "2022-05-20T00:00:00Z",
-      "count": 3,
-      "uniques": 3
+      "count": 1,
+      "uniques": 1
     },
     {
       "timestamp": "2022-05-21T00:00:00Z",
