@@ -1,3 +1,10 @@
+2022-06-03T16:18:15Z:
+* notice: last 14d: unq all: 4 15
+* notice: prev accum: outdated-unq outdated-all / unq all: 163 312 / 176 329
+* notice: next accum: outdated-unq outdated-all / unq all: 163 312 / 174 327
+* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -2 -2 / +10 +14 -9 -13 / 1 1
+* notice: removed / changed dates: [] / [2022-05-20]
+
 2022-06-03T08:13:48Z:
 * notice: last 14d: unq all: 5 17
 * notice: prev accum: outdated-unq outdated-all / unq all: 163 312 / 182 339
